# cuid2gen

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
npm/: package.json.tmpl
npm/cuid2gen/: .pnp.cjs  package.json  pnpm-lock.yaml  tsconfig.json
npm/cuid2gen-darwin-arm64/: package.json
src/: index.ts  main.rs
tests/: cli.rs
